[gd_scene load_steps=10 format=2]

[ext_resource path="res://gui/ingame/arrow_prompt.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/GUI.gd" type="Script" id=2]
[ext_resource path="res://gui/ingame/health_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/ingame/portrait.png" type="Texture" id=4]
[ext_resource path="res://gui/ingame/life_pieces.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/ingame/fun_particle.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/pause_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/screens/tutorial.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "show"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("portrait:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.225313, 1 ),
"update": 0,
"values": [ Vector2( 8, -80 ), Vector2( 8, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("life_pieces:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.297302, 1 ),
"update": 0,
"values": [ Vector2( 0, 373 ), Vector2( 0, 323 ) ]
}

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 2 )

[node name="arrow" parent="." instance=ExtResource( 1 )]

[node name="portrait" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = -80.0
margin_right = 60.0
margin_bottom = -27.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar" parent="portrait" instance=ExtResource( 3 )]
margin_left = 26.0
margin_top = -6.5
margin_right = 50.0
margin_bottom = 6.5
rect_min_size = Vector2( 24, 13 )
is_players = true
lives = 0
current_lives = 0

[node name="enemy_bar" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar" parent="enemy_bar" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 308.0
margin_top = 14.0
margin_right = 332.0
margin_bottom = 27.0
rect_min_size = Vector2( 24, 13 )
is_players = false
lives = 0
current_lives = 0

[node name="life_pieces" parent="." instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_right = 0.0
margin_top = 13.0
margin_right = 37.0
margin_bottom = 50.0

[node name="fun_particle" parent="." instance=ExtResource( 6 )]

[node name="fun_particle_start" type="Position2D" parent="."]
position = Vector2( 27, 333 )

[node name="anims" type="AnimationPlayer" parent="."]
anims/show = SubResource( 1 )

[node name="pause_menu" parent="." instance=ExtResource( 7 )]

[node name="tutorial" parent="." instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -100.0
margin_right = 100.0
margin_bottom = 100.0
